Product and volume management for admin (frontend in progress) + refactoring of product services and controllers (add, modify, delete) + creation of the VolumeService service to manage volumes and prices